Fix Spring config