@@ -64,4 +64,18 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --add-opens net.javacrumbs.shedlock.spring/net.javacrumbs.shedlock.spring.aop.multiplelockproviders=spring.core,spring.beans,spring.context  --add-opens net.javacrumbs.shedlock.spring/net.javacrumbs.shedlock.spring.it=spring.core,spring.beans,spring.context  --add-opens net.javacrumbs.shedlock.spring/net.javacrumbs.shedlock.spring.proxytest=spring.core,spring.beans,spring.context
+                    </argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
